# LangBiTe

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  test.py
documentation/: EXTENDING.md  USER_GUIDE.md
documentation/examples/: input_example.json  input_example_sexism.json
langbite/: LangBiTe.py  ethical_requirement.py  global_evaluation.py  langbite.py  llm_abstract_factory.py  llm_factory.py  llm_huggingface_factory.py  llm_huggingface_service.py  llm_openai_factory.py  llm_openai_service.py  llm_replicate_factory.py  llm_replicate_service.py  main.py  oracle.py  oracle_factory.py  oracle_prediction.py  prompt.py  prompt_io_manager.py  prompt_response.py  sentiment_analyzer_oracle.py  test_execution.py  test_scenario.py  utils.py  view_model.py
langbite/controllers/: global_evaluation.py  test_execution.py  test_scenario.py
langbite/io_managers/: file_manager.py  json_io_manager.py  prompt_io_manager.py  reporting_io_manager.py  secrets.py
langbite/llm_services/: llm_factory.py  llm_huggingface_factory.py  (+8 more)
resources/: prompts.csv
src/: global_evaluation.py  huggingchat.py  huggingchat_broker.py  langbite.py  llm_factory.py  llm_huggingface_factory.py  llm_huggingface_service.py  llm_openai_factory.py  llm_openai_service.py  llm_service.py  main.py  oracle.py  oracle_factory.py  prompt.py  prompt_io_manager.py  reporting_io_manager.py  scenario_io_manager.py  test_execution.py  test_scenario.py  view_model.py
test/: main.py  simple_test.json  simple_test.py
(+24 files in other folders)
