[metadata]
name = langbite
version = 0.0.1
author = Sergio Morales
description = A Bias Tester framework for LLMs
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://github.com/SOM-Research/LangBiTe
    Source Code = https://github.com/SOM-Research/LangBiTe
    Bug Tracker = https://github.com/SOM-Research/LangBiTe/issues
keywords = python, llm, bias
license = MIT
license_files = LICENSE.md

[options]
python_requires = >=3.11, <3.12
packages=find:
install_requires = file: requirements.txt
include_package_data = True

[options.package_data]
langbite.resources = *
